2005-02-10 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (assignToSameBank) : fixed cast to pointer of
	  different size for Alpha
	* src/pic16/gen.c (genCmpEq) : improved compare with 0

2005-02-09 Raphael Neider <rneider AT web.de>

	* src/SDCC.lex(doPragma) : save and restore warning options as well
	  (also added new stack plus clone- and copyAndFreeSDCCERRG())
	* have #pragma less_pedantic set the errorlevel to WARNING
	  (fixes #1117001)
	* (cloneOptimize) : fixed wrong malloc's size
	* support/Util/SDCCerr.[ch] : made SDCCERRG globally accessible to
	  facilitate correct handling of #pragma (save|restore)

2005-02-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c: removed non-standard C nameless struct/union

2005-02-04 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/gen.c : Fix for bugs #1080519 & #1115662.

2004-02-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/c8051f120.h: added declarations for sbit port 2,3&4

2005-02-02 Raphael Neider <rneider AT web.de>

	* src/SDCCast.c (processParms): disabled W_NONRENT_ARGS for pic16 port
	* src/pic16/gen.c (aopForSym): reenabled special case for function pointers
	* (pic16_storeForReturn): fixed to allow returning function pointers
	* (genPackBits): improved accessing full bytes, implemented for GPOINTERs
	* device/include/pic16/{stddef.h,stdbool.h}: added

2004-02-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/c8051f040.h: added define CPT2_PAGE

2005-02-01 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic16/pic16.dsp : Added file graph.c to make it compile under windows
	* src/pic16/Makefile.bcc : Do not use this file but added file graph.c as it
	 appeared to be required

2004-01-31 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added include/asm/ds390, include/asm/mcs51,
	  include/mcs51 and include/z80 directories to the package
